--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<img src="https://i.ibb.co/rR6K86q9/GLAM.png" alt="Glam by Mel Logo" style="max-width: 200px; height: auto; margin-bottom: 20px;">
+<h1 class="lipstick-red" style="font-family: 'Playfair Display', serif; font-size: 3rem; margin-bottom: 20px;">
+  Glam by Mel
+</h1>
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
