--- a/public/index.html
+++ b/public/index.html
@@ -124,6 +124,13 @@ html {
   from { transform: translateY(0); opacity: 1; }
   to { transform: translateY(100px); opacity: 0; }
 }
+
+/* 🔹 HIGH-QUALITY IMAGE RENDERING */
+img {
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
 </style>
 </head>
 <body class="font-body charcoal cream-bg overflow-x-hidden">
@@ -299,7 +306,7 @@ Passionate about enhancing your natural beauty, I specialize in creating stunnin
 </section>
 
 <!-- Client Gallery Section -->
-<section id="gallery" class="py-20 px-4 cream-bg">
+<section id="gallery" class="py-20 px-4 bg-white">
 <div class="max-w-6xl mx-auto">
 <div class="text-center mb-12">
 <h2 class="font-display text-3xl sm:text-4xl md:text-5xl mb-4 lipstick-red">Client Gallery</h2>
@@ -313,7 +320,6 @@ Passionate about enhancing your natural beauty, I specialize in creating stunnin
 <img src="https://i.ibb.co/GfSb4hwz/image.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
 <img src="https://i.ibb.co/Fb38ysdz/image.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
 <img src="https://i.ibb.co/mrrFx6Rm/image.jpg" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
-<img src="https://i.ibb.co/rR6K86q9/GLAM.png" alt="Client Glam Look" class="w-full h-auto rounded-lg shadow-md">
 </div>
 </div>
 </section>
