--- a/public/index.html
+++ b/public/index.html
@@ -73,63 +73,6 @@ body {
 .star-btn:hover { 
   transform: scale(1.2);
 }
-.review-card { 
-  animation: fadeInUp 0.5s ease forwards;
-}
-@keyframes fadeInUp { 
-  from { opacity: 0; transform: translateY(20px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-.section-divider { 
-  height: 1px;
-  background: linear-gradient(90deg, transparent, #D4AF37, transparent);
-  margin: 4rem 0;
-}
-html { 
-  scroll-behavior: smooth;
-}
-.mobile-menu { 
-  transform: translateX(100%);
-  transition: transform 0.3s ease;
-  position: fixed;
-  top: 4rem;
-  right: 0;
-  bottom: 0;
-  width: 16rem;
-  background: #FFF9F0;
-  border-left: 1px solid #D4AF37;
-  z-index: 40;
-  box-shadow: -4px 0 20px rgba(0,0,0,0.05);
-}
-.mobile-menu.active { 
-  transform: translateX(0);
-}
-.toast { 
-  animation: slideIn 0.3s ease, slideOut 0.3s ease 2.7s forwards;
-  position: fixed;
-  bottom: 1rem;
-  right: 1rem;
-  z-index: 50;
-  padding: 1.5rem;
-  border-radius: 0.5rem;
-  color: white;
-  background: #C0003B;
-  box-shadow: 0 4px 20px rgba(192, 0, 59, 0.3);
-}
-@keyframes slideIn { 
-  from { transform: translateY(100px); opacity: 0; }
-  to { transform: translateY(0); opacity: 1; }
-}
-@keyframes slideOut { 
-  from { transform: translateY(0); opacity: 1; }
-  to { transform: translateY(100px); opacity: 0; }
-}
-
-/* 🔹 HIGH-QUALITY IMAGE RENDERING */
-img {
-  image-rendering: -webkit-optimize-contrast;
-  image-rendering: crisp-edges;
-}
 </style>
 </head>
 <body class="font-body charcoal cream-bg overflow-x-hidden">
@@ -159,7 +102,7 @@ img {
 </button>
 </div>
 </div>
-<div id="mobile-menu" class="mobile-menu md:hidden">
+<div id="mobile-menu" class="mobile-menu md:hidden hidden">
 <div class="flex flex-col p-6 space-y-6">
 <a href="#home" class="charcoal hover:text-lipstick-red uppercase tracking-wider" onclick="closeMobileMenu()">Home</a>
 <a href="#gallery" class="charcoal hover:text-lipstick-red uppercase tracking-wider" onclick="closeMobileMenu()">Gallery</a>
@@ -328,61 +271,61 @@ Book Appointment
 <p class="charcoal">Let's create your perfect look together</p>
 </div>
 <div class="card-glass p-8 md:p-12">
-<form id="booking-form" class="space-y-6">
+<form action="https://formspree.io/f/mvzrbbqg" method="POST" class="space-y-6">
 <div class="grid md:grid-cols-2 gap-6">
 <div>
-<label for="client-name" class="block text-sm charcoal mb-2">Full Name *</label>
-<input type="text" id="client-name" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal focus:border-lipstick-red focus:outline-none" placeholder="Your full name">
+<label for="name" class="block text-sm charcoal mb-2">Full Name *</label>
+<input type="text" name="name" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal focus:border-lipstick-red focus:outline-none" placeholder="Your full name">
 </div>
 <div>
-<label for="client-email" class="block text-sm charcoal mb-2">Email *</label>
-<input type="email" id="client-email" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal focus:border-lipstick-red focus:outline-none" placeholder="your@email.com">
+<label for="email" class="block text-sm charcoal mb-2">Email *</label>
+<input type="email" name="email" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal focus:border-lipstick-red focus:outline-none" placeholder="your@email.com">
 </div>
 </div>
 <div class="grid md:grid-cols-2 gap-6">
 <div>
-<label for="client-phone" class="block text-sm charcoal mb-2">Phone Number *</label>
-<input type="tel" id="client-phone" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal focus:border-lipstick-red focus:outline-none" placeholder="Your phone number">
+<label for="phone" class="block text-sm charcoal mb-2">Phone Number *</label>
+<input type="tel" name="phone" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal focus:border-lipstick-red focus:outline-none" placeholder="Your phone number">
 </div>
 <div>
-<label for="service-select" class="block text-sm charcoal mb-2">Service *</label>
-<select id="service-select" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal focus:border-lipstick-red focus:outline-none appearance-none bg-gradient-to-r from-transparent to-transparent">
-<option value="" class="bg-gray-900">Select a service</option>
-<option value="bridal-makeup" class="bg-gray-900">Bridal Makeup</option>
-<option value="event-makeup" class="bg-gray-900">Event Makeup</option>
-<option value="natural-glam" class="bg-gray-900">Natural Glam</option>
-<option value="bridal-hair" class="bg-gray-900">Bridal Hair</option>
-<option value="event-styling" class="bg-gray-900">Event Styling</option>
-<option value="full-package" class="bg-gray-900">Full Glam Package</option>
+<label for="service" class="block text-sm charcoal mb-2">Service *</label>
+<select name="service" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal focus:border-lipstick-red focus:outline-none appearance-none">
+<option value="">Select a service</option>
+<option value="Bridal Makeup">Bridal Makeup</option>
+<option value="Event Makeup">Event Makeup</option>
+<option value="Natural Glam">Natural Glam</option>
+<option value="Bridal Hair">Bridal Hair</option>
+<option value="Event Styling">Event Styling</option>
+<option value="Full Glam Package">Full Glam Package</option>
 </select>
 </div>
 </div>
 <div class="grid md:grid-cols-2 gap-6">
 <div>
-<label for="booking-date" class="block text-sm charcoal mb-2">Preferred Date *</label>
-<input type="date" id="booking-date" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal focus:border-lipstick-red focus:outline-none">
+<label for="date" class="block text-sm charcoal mb-2">Preferred Date *</label>
+<input type="date" name="date" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal focus:border-lipstick-red focus:outline-none">
 </div>
 <div>
-<label for="booking-time" class="block text-sm charcoal mb-2">Preferred Time *</label>
-<select id="booking-time" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal focus:border-lipstick-red focus:outline-none appearance-none">
-<option value="" class="bg-gray-900">Select a time</option>
-<option value="09:00" class="bg-gray-900">9:00 AM</option>
-<option value="10:00" class="bg-gray-900">10:00 AM</option>
-<option value="11:00" class="bg-gray-900">11:00 AM</option>
-<option value="12:00" class="bg-gray-900">12:00 PM</option>
-<option value="13:00" class="bg-gray-900">1:00 PM</option>
-<option value="14:00" class="bg-gray-900">2:00 PM</option>
-<option value="15:00" class="bg-gray-900">3:00 PM</option>
-<option value="16:00" class="bg-gray-900">4:00 PM</option>
-<option value="17:00" class="bg-gray-900">5:00 PM</option>
+<label for="time" class="block text-sm charcoal mb-2">Preferred Time *</label>
+<select name="time" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal focus:border-lipstick-red focus:outline-none appearance-none">
+<option value="">Select a time</option>
+<option value="09:00">9:00 AM</option>
+<option value="10:00">10:00 AM</option>
+<option value="11:00">11:00 AM</option>
+<option value="12:00">12:00 PM</option>
+<option value="13:00">1:00 PM</option>
+<option value="14:00">2:00 PM</option>
+<option value="15:00">3:00 PM</option>
+<option value="16:00">4:00 PM</option>
+<option value="17:00">5:00 PM</option>
 </select>
 </div>
 </div>
 <div>
-<label for="booking-message" class="block text-sm charcoal mb-2">Additional Details</label>
-<textarea id="booking-message" rows="4" class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal resize-none focus:border-lipstick-red focus:outline-none" placeholder="Tell us about your event, any specific looks you'd like, or any questions..."></textarea>
+<label for="message" class="block text-sm charcoal mb-2">Additional Details</label>
+<textarea name="message" rows="4" class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal resize-none focus:border-lipstick-red focus:outline-none" placeholder="Tell us about your event..."></textarea>
 </div>
-<button type="submit" id="submit-booking-btn" class="btn-lipstick w-full py-4 text-white font-semibold uppercase tracking-wider text-lg">Request Booking</button>
+<button type="submit" class="btn-lipstick w-full py-4 text-white font-semibold uppercase tracking-wider text-lg">Request Booking</button>
 <p class="text-center charcoal text-sm">We'll contact you within 24 hours via email or phone</p>
 </form>
 </div>
@@ -399,29 +342,27 @@ Book Appointment
 <div class="max-w-xl mx-auto">
 <div class="card-glass p-8">
 <h3 class="font-display text-2xl mb-6 text-center charcoal">Leave a Review</h3>
-<form id="review-form" class="space-y-6">
+<form action="https://formspree.io/f/xvzrbbvg" method="POST" class="space-y-6">
 <div>
 <label for="reviewer-name" class="block text-sm charcoal mb-2">Your Name</label>
-<input type="text" id="reviewer-name" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal focus:border-lipstick-red focus:outline-none" placeholder="Enter your name">
+<input type="text" name="name" required class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal focus:border-lipstick-red focus:outline-none" placeholder="Enter your name">
 </div>
 <div>
 <label class="block text-sm charcoal mb-2">Your Rating</label>
-<div id="star-rating" class="flex gap-2 justify-center">
-<button type="button" class="star-btn text-4xl text-gray-600 hover:text-lipstick-red" data-rating="1">★</button>
-<button type="button" class="star-btn text-4xl text-gray-600 hover:text-lipstick-red" data-rating="2">★</button>
-<button type="button" class="star-btn text-4xl text-gray-600 hover:text-lipstick-red" data-rating="3">★</button>
-<button type="button" class="star-btn text-4xl text-gray-600 hover:text-lipstick-red" data-rating="4">★</button>
-<button type="button" class="star-btn text-4xl text-gray-600 hover:text-lipstick-red" data-rating="5">★</button>
+<div class="flex gap-2 justify-center">
+<input type="radio" id="star5" name="rating" value="5" class="hidden"><label for="star5" class="text-4xl cursor-pointer">★</label>
+<input type="radio" id="star4" name="rating" value="4" class="hidden"><label for="star4" class="text-4xl cursor-pointer">★</label>
+<input type="radio" id="star3" name="rating" value="3" class="hidden"><label for="star3" class="text-4xl cursor-pointer">★</label>
+<input type="radio" id="star2" name="rating" value="2" class="hidden"><label for="star2" class="text-4xl cursor-pointer">★</label>
+<input type="radio" id="star1" name="rating" value="1" class="hidden"><label for="star1" class="text-4xl cursor-pointer">★</label>
 </div>
-<input type="hidden" id="selected-rating" value="0">
 </div>
 <div>
 <label for="review-text" class="block text-sm charcoal mb-2">Your Experience</label>
-<textarea id="review-text" required rows="4" class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal resize-none focus:border-lipstick-red focus:outline-none" placeholder="Tell us about your experience..."></textarea>
+<textarea name="review" required rows="4" class="w-full px-4 py-3 rounded-lg bg-white/10 border border-lipstick-red/30 charcoal placeholder-charcoal resize-none focus:border-lipstick-red focus:outline-none" placeholder="Tell us about your experience..."></textarea>
 </div>
-<button type="submit" id="submit-review-btn" class="btn-lipstick w-full py-4 text-white font-semibold uppercase tracking-wider">Submit Review</button>
+<button type="submit" class="btn-lipstick w-full py-4 text-white font-semibold uppercase tracking-wider">Submit Review</button>
 </form>
-</div>
 </div>
 </div>
 </section>
@@ -435,109 +376,29 @@ Book Appointment
 <p class="charcoal">Certified Makeup Artist & Hair Stylist</p>
 </div>
 <div class="flex items-center gap-6">
-<a href="https://www.instagram.com/glamby_mel_" target="_blank" rel="noopener noreferrer" class="w-10 h-10 rounded-full bg-lipstick-red flex items-center justify-center hover:bg-lipstick-red/90 transition-colors">
+<a href="https://www.instagram.com/glamby_mel_" target="_blank" rel="noopener noreferrer" class="w-10 h-10 rounded-full bg-lipstick-red flex items-center justify-center">
 <svg class="w-5 h-5 text-white" fill="currentColor" viewBox="0 0 24 24">
 <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073z" />
 </svg>
 </a>
 </div>
 </div>
-<div class="section-divider my-8"></div>
-<p class="text-center charcoal text-sm">© 2024 Glam by Mel. All rights reserved.</p>
+<p class="text-center charcoal text-sm mt-8">© 2024 Glam by Mel. All rights reserved.</p>
 </div>
 </footer>
 
-<div id="toast-container"></div>
-
 <script>
-// Mobile menu functionality
-const mobileMenuBtn = document.getElementById('mobile-menu-btn');
-const mobileMenu = document.getElementById('mobile-menu');
-if (mobileMenuBtn && mobileMenu) {
-  mobileMenuBtn.addEventListener('click', () => {
-    mobileMenu.classList.toggle('active');
-  });
-}
-
-function closeMobileMenu() {
-  if (mobileMenu) {
-    mobileMenu.classList.remove('active');
-  }
-}
-
-// Set minimum date for booking
-const today = new Date().toISOString().split('T')[0];
-const bookingDateInput = document.getElementById('booking-date');
-if (bookingDateInput) {
-  bookingDateInput.setAttribute('min', today);
-}
-
-// Star rating functionality
-let selectedRating = 0;
-const starButtons = document.querySelectorAll('#star-rating button');
-starButtons.forEach(btn => {
-  btn.addEventListener('click', () => {
-    selectedRating = parseInt(btn.dataset.rating);
-    document.getElementById('selected-rating').value = selectedRating;
-    updateStarDisplay();
-  });
+// Mobile menu
+document.getElementById('mobile-menu-btn')?.addEventListener('click', () => {
+  document.getElementById('mobile-menu').classList.toggle('hidden');
 });
-
-function updateStarDisplay() {
-  starButtons.forEach(btn => {
-    const rating = parseInt(btn.dataset.rating);
-    if (rating <= selectedRating) {
-      btn.classList.remove('text-gray-600');
-      btn.classList.add('text-lipstick-red');
-    } else {
-      btn.classList.remove('text-lipstick-red');
-      btn.classList.add('text-gray-600');
-    }
-  });
+function closeMobileMenu() {
+  document.getElementById('mobile-menu').classList.add('hidden');
 }
 
-// Toast notification
-function showToast(message, type = 'success') {
-  const container = document.getElementById('toast-container');
-  if (!container) return;
-  
-  const toast = document.createElement('div');
-  toast.className = `toast ${type === 'success' ? 'bg-lipstick-red' : 'bg-red-600'}`;
-  toast.textContent = message;
-  container.appendChild(toast);
-  
-  setTimeout(() => {
-    if (toast.parentNode) {
-      toast.parentNode.removeChild(toast);
-    }
-  }, 3000);
-}
-
-// Review form submission
-const reviewForm = document.getElementById('review-form');
-if (reviewForm) {
-  reviewForm.addEventListener('submit', (e) => {
-    e.preventDefault();
-    if (selectedRating === 0) {
-      showToast('Please select a star rating', 'error');
-      return;
-    }
-    showToast('Thank you for your review!');
-    reviewForm.reset();
-    selectedRating = 0;
-    updateStarDisplay();
-  });
-}
-
-// Booking form submission
-const bookingForm = document.getElementById('booking-form');
-if (bookingForm) {
-  bookingForm.addEventListener('submit', (e) => {
-    e.preventDefault();
-    showToast('Booking request submitted! We\'ll contact you within 24 hours.');
-    bookingForm.reset();
-  });
-}
+// Set min date
+const today = new Date().toISOString().split('T')[0];
+document.querySelector('[name="date"]')?.setAttribute('min', today);
 </script>
 </body>
 </html>
