--- a/public/index.html
+++ b/public/index.html
@@ -64,15 +64,6 @@ body {
   border-color: #C0003B;
   box-shadow: 0 10px 30px rgba(192, 0, 59, 0.1);
 }
-.star-btn { 
-  transition: all 0.2s ease;
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-.star-btn:hover { 
-  transform: scale(1.2);
-}
 </style>
 </head>
 <body class="font-body charcoal cream-bg overflow-x-hidden">
@@ -350,11 +341,11 @@ Book Appointment
 <div>
 <label class="block text-sm charcoal mb-2">Your Rating</label>
 <div class="flex gap-2 justify-center">
-<input type="radio" id="star5" name="rating" value="5" class="hidden"><label for="star5" class="text-4xl cursor-pointer">★</label>
-<input type="radio" id="star4" name="rating" value="4" class="hidden"><label for="star4" class="text-4xl cursor-pointer">★</label>
-<input type="radio" id="star3" name="rating" value="3" class="hidden"><label for="star3" class="text-4xl cursor-pointer">★</label>
-<input type="radio" id="star2" name="rating" value="2" class="hidden"><label for="star2" class="text-4xl cursor-pointer">★</label>
-<input type="radio" id="star1" name="rating" value="1" class="hidden"><label for="star1" class="text-4xl cursor-pointer">★</label>
+  <input type="radio" id="star5" name="rating" value="5" class="hidden"><label for="star5" class="text-4xl cursor-pointer text-charcoal hover:text-gold">★</label>
+  <input type="radio" id="star4" name="rating" value="4" class="hidden"><label for="star4" class="text-4xl cursor-pointer text-charcoal hover:text-gold">★</label>
+  <input type="radio" id="star3" name="rating" value="3" class="hidden"><label for="star3" class="text-4xl cursor-pointer text-charcoal hover:text-gold">★</label>
+  <input type="radio" id="star2" name="rating" value="2" class="hidden"><label for="star2" class="text-4xl cursor-pointer text-charcoal hover:text-gold">★</label>
+  <input type="radio" id="star1" name="rating" value="1" class="hidden"><label for="star1" class="text-4xl cursor-pointer text-charcoal hover:text-gold">★</label>
 </div>
 </div>
 <div>
@@ -399,6 +390,21 @@ function closeMobileMenu() {
 // Set min date
 const today = new Date().toISOString().split('T')[0];
 document.querySelector('[name="date"]')?.setAttribute('min', today);
+
+// Star rating visual feedback
+document.querySelectorAll('#contact input[type="radio"][name="rating"]').forEach(radio => {
+  radio.addEventListener('change', () => {
+    const labels = document.querySelectorAll('#contact label[for^="star"]');
+    labels.forEach(label => {
+      label.classList.remove('text-gold');
+      label.classList.add('text-charcoal');
+    });
+    for (let i = 0; i < radio.value; i++) {
+      labels[i].classList.remove('text-charcoal');
+      labels[i].classList.add('text-gold');
+    }
+  });
+});
 </script>
 </body>
 </html>
