--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,35 @@ body {
   border-color: #C0003B;
   box-shadow: 0 10px 30px rgba(192, 0, 59, 0.1);
 }
+
+/* STAR RATING STYLES */
+.star-rating {
+  display: flex;
+  gap: 0.5rem;
+  justify-content: center;
+}
+.star-rating input[type="radio"] {
+  display: none;
+}
+.star-rating label {
+  font-size: 1.5rem;
+  color: #2D2D2D; /* charcoal default */
+  cursor: pointer;
+  transition: color 0.2s ease;
+}
+.star-rating label:hover,
+.star-rating label:hover ~ label,
+.star-rating input[type="radio"]:checked ~ label {
+  color: #2D2D2D; /* keep unselected stars charcoal */
+}
+.star-rating input[type="radio"]:checked + label,
+.star-rating input[type="radio"]:checked + label ~ label {
+  color: #D4AF37; /* gold when selected and to the left */
+}
+.star-rating label:hover,
+.star-rating label:hover ~ label {
+  color: #D4AF37; /* gold on hover */
+}
 </style>
 </head>
 <body class="font-body charcoal cream-bg overflow-x-hidden">
@@ -340,12 +369,12 @@ Book Appointment
 </div>
 <div>
 <label class="block text-sm charcoal mb-2">Your Rating</label>
-<div class="flex gap-2 justify-center">
-  <input type="radio" id="star5" name="rating" value="5" class="hidden"><label for="star5" class="text-4xl cursor-pointer text-charcoal hover:text-gold">★</label>
-  <input type="radio" id="star4" name="rating" value="4" class="hidden"><label for="star4" class="text-4xl cursor-pointer text-charcoal hover:text-gold">★</label>
-  <input type="radio" id="star3" name="rating" value="3" class="hidden"><label for="star3" class="text-4xl cursor-pointer text-charcoal hover:text-gold">★</label>
-  <input type="radio" id="star2" name="rating" value="2" class="hidden"><label for="star2" class="text-4xl cursor-pointer text-charcoal hover:text-gold">★</label>
-  <input type="radio" id="star1" name="rating" value="1" class="hidden"><label for="star1" class="text-4xl cursor-pointer text-charcoal hover:text-gold">★</label>
+<div class="star-rating">
+  <input type="radio" id="star5" name="rating" value="5"><label for="star5">★</label>
+  <input type="radio" id="star4" name="rating" value="4"><label for="star4">★</label>
+  <input type="radio" id="star3" name="rating" value="3"><label for="star3">★</label>
+  <input type="radio" id="star2" name="rating" value="2"><label for="star2">★</label>
+  <input type="radio" id="star1" name="rating" value="1"><label for="star1">★</label>
 </div>
 </div>
 <div>
@@ -390,21 +419,6 @@ function closeMobileMenu() {
 // Set min date
 const today = new Date().toISOString().split('T')[0];
 document.querySelector('[name="date"]')?.setAttribute('min', today);
-
-// Star rating visual feedback
-document.querySelectorAll('#contact input[type="radio"][name="rating"]').forEach(radio => {
-  radio.addEventListener('change', () => {
-    const labels = document.querySelectorAll('#contact label[for^="star"]');
-    labels.forEach(label => {
-      label.classList.remove('text-gold');
-      label.classList.add('text-charcoal');
-    });
-    for (let i = 0; i < radio.value; i++) {
-      labels[i].classList.remove('text-charcoal');
-      labels[i].classList.add('text-gold');
-    }
-  });
-});
 </script>
 </body>
 </html>
